[package]
name = "lang-3bc-sys"
version = "0.1.1"
edition = "2021"
build = "build.rs"
description = "[WIP] Raw bindigns for 3bc lang!"
license = "MIT"
repository = "https://github.com/yxqsnz/3bc-sys"
documentation = "https://docs.rs/lang-3bc-sys"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.72"
bindgen = "0.59.2"
